k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talep-yonetimi
  labels:
    app: talep-yonetimi
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: talep-yonetimi
